resource/src/main/java/com/example/resource/errors/Errors.java
package com.example.resource.errors;

public enum Errors {

    membershipNotFound("1001", "Membership not found");

    private final String code;
    private final String message;

    Errors(String code, String message) {
        this.code = code;
        this.message = message;
    }

    public String getCode() {
        return code;
    }

    public String getMessage() {
        return message;
    }
}
